# NdkDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yao/ndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-test.cpp
app/src/main/java/com/yao/ndkdemo/: BaseApplication.java  MainActivity.java  SignatureUtils.java  TestActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/yao/ndkdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
